--- a/events/index.html
+++ b/events/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	
+
 <!-- Mirrored from tympanus.net/Tutorials/PiecesSlider/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2018 11:03:29 GMT -->
 <head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Animated Fragment Slideshow | Codrops</title>
-		<meta name="description" content="A slider made with the Pieces library where slides are animated in a fragmented look." />
-		<meta name="keywords" content="slideshow, slider, pieces, fragments, animation, svg, canvas, javascript" />
-		<meta name="author" content="Luis Manuel for Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="css/slider.css" />
-		<link rel="stylesheet" type="text/css" href="pater/pater.css" />
-		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-		<script src="../../codrops/adpacks/analytics.js"></script>
-	</head>
-	<body class="demo-1">
-		
-		<main>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Animated Fragment Slideshow | Codrops</title>
+	<meta name="description" content="A slider made with the Pieces library where slides are animated in a fragmented look." />
+	<meta name="keywords" content="slideshow, slider, pieces, fragments, animation, svg, canvas, javascript" />
+	<meta name="author" content="Luis Manuel for Codrops" />
+	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	<link rel="stylesheet" type="text/css" href="css/slider.css" />
+	<link rel="stylesheet" type="text/css" href="pater/pater.css" />
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
+	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+	<script src="../../codrops/adpacks/analytics.js"></script>
+</head>
+<body class="demo-1">
+
+	<main>
 
 
 
@@ -26,42 +30,42 @@
 
 
 
-			<div class="content">
-				<!-- Pieces Slider -->
-				<div class="pieces-slider">
-					<!-- Each slide with corresponding image and text -->
-					<div class="pieces-slider__slide">
-						<img class="pieces-slider__image" src="img/1.jpg" alt="">
-						<h2 class="pieces-slider__text">Status Quo</h2>
-					</div>
-					<div class="pieces-slider__slide">
-						<img class="pieces-slider__image" src="img/2.jpg" alt="">
-						<h2 class="pieces-slider__text">Amphibia</h2>
-					</div>
-					<div class="pieces-slider__slide">
-						<img class="pieces-slider__image" src="img/3.jpg" alt="">
-						<h2 class="pieces-slider__text">Love Letters</h2>
-					</div>
-					<div class="pieces-slider__slide">
-						<img class="pieces-slider__image" src="img/4.jpg" alt="">
-						<h2 class="pieces-slider__text">Green Flight</h2>
-					</div>
-					<div class="pieces-slider__slide">
-						<img class="pieces-slider__image" src="img/5.jpg" alt="">
-						<h2 class="pieces-slider__text">Fun Fun Run</h2>
-					</div>
-					<!-- Canvas to draw the pieces -->
-					<canvas class="pieces-slider__canvas"></canvas>
-					<!-- Slider buttons: prev and next -->
-					<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev"></img>
-					<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next"></img>
+		<div class="content">
+			<!-- Pieces Slider -->
+			<div class="pieces-slider">
+				<!-- Each slide with corresponding image and text -->
+				<div class="pieces-slider__slide">
+					<img class="pieces-slider__image" src="img/1.jpg" alt="">
+					<h2 class="pieces-slider__text">Status Quo</h2>
 				</div>
+				<div class="pieces-slider__slide">
+					<img class="pieces-slider__image" src="img/2.jpg" alt="">
+					<h2 class="pieces-slider__text">Amphibia</h2>
+				</div>
+				<div class="pieces-slider__slide">
+					<img class="pieces-slider__image" src="img/3.jpg" alt="">
+					<h2 class="pieces-slider__text">Love Letters</h2>
+				</div>
+				<div class="pieces-slider__slide">
+					<img class="pieces-slider__image" src="img/4.jpg" alt="">
+					<h2 class="pieces-slider__text">Green Flight</h2>
+				</div>
+				<div class="pieces-slider__slide">
+					<img class="pieces-slider__image" src="img/5.jpg" alt="">
+					<h2 class="pieces-slider__text">Fun Fun Run</h2>
+				</div>
+				<!-- Canvas to draw the pieces -->
+				<canvas class="pieces-slider__canvas"></canvas>
+				<!-- Slider buttons: prev and next -->
+				<img src="./img/left.png" class="pieces-slider__button pieces-slider__button--prev"></img>
+				<img src="./img/right.png" class="pieces-slider__button pieces-slider__button--next"></img>
 			</div>
-		</main>
-		<script src='js/anime.min.js'></script>
-		<script src='js/pieces.min.js'></script>
-		<script src='js/demo.js'></script>
-	</body>
+		</div>
+	</main>
+	<script src='js/anime.min.js'></script>
+	<script src='js/pieces.min.js'></script>
+	<script src='js/demo.js'></script>
+</body>
 
 <!-- Mirrored from tympanus.net/Tutorials/PiecesSlider/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 23 Feb 2018 11:03:44 GMT -->
 </html>
