--- a/events/index.html
+++ b/events/index.html
@@ -10,9 +10,12 @@
 	<meta name="keywords" content="slideshow, slider, pieces, fragments, animation, svg, canvas, javascript" />
 	<meta name="author" content="Luis Manuel for Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/base.css" />
 	<link rel="stylesheet" type="text/css" href="css/slider.css" />
 	<link rel="stylesheet" type="text/css" href="pater/pater.css" />
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -21,6 +24,41 @@
 	<script src="../../codrops/adpacks/analytics.js"></script>
 </head>
 <body class="demo-1">
+
+
+
+
+	<div class="header-nightsky">
+		<nav class="navbar navbar-default navbar-static-top ">
+			<div class="container">
+				<a class="navbar-brand" href="#">LOGO</a>
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="https://www.culrav.in">HOME</a></li>
+						<li><a href="">EVENTS</a></li>
+						<li><a href="">SPONSORS</a></li>
+						<li><a href="">TEAM</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+
+
+
+
+
+
+
+
 
 	<main>
 
