--- a/subevents/index.html
+++ b/subevents/index.html
@@ -11,8 +11,12 @@
 	<meta name="author" content="Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Overpass+Mono:400,700" rel="stylesheet">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+	
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<script
 	src="https://code.jquery.com/jquery-3.3.1.min.js"
 	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
@@ -32,9 +36,51 @@
 </head>
 <body>
 
+
+
+
+
+
+
+	<div class="header-nightsky">
+		<nav class="navbar navbar-default navbar-static-top ">
+			<div class="container">
+				<a class="navbar-brand" href="#">LOGO</a>
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="myNavbar">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="https://www.culrav.in">HOME</a></li>
+						<li><a href="">EVENTS</a></li>
+						<li><a href="">SPONSORS</a></li>
+						<li><a href="">TEAM</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	<section class="content">
 		<div class="grid grid--effect-hamal">
-			<a href="#" class="grid__item grid__item--c1">
+			<a class="grid__item grid__item--c1">
 				<div class="stack">
 					<div class="stack__deco"></div>
 					<div class="stack__deco"></div>
@@ -58,7 +104,7 @@
 					</div>
 				</div>
 			</a>
-			<a href="#" class="grid__item grid__item--c2">
+			<a class="grid__item grid__item--c2">
 				<div class="stack">
 					<div class="stack__deco"></div>
 					<div class="stack__deco"></div>
@@ -82,7 +128,7 @@
 					</div>
 				</div>
 			</a>
-			<a href="#" class="grid__item grid__item--c3">
+			<a  class="grid__item grid__item--c3">
 				<div class="stack">
 					<div class="stack__deco"></div>
 					<div class="stack__deco"></div>
@@ -108,6 +154,11 @@
 			</a>
 		</div>
 	</section>
+
+
+
+
+	
 
 </main>
 <script src="js/anime.min.js"></script>
