--- a/subevents/index.html
+++ b/subevents/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Stack Motion Hover Effects | Codrops</title>
+	<title>Rangsaazi | Culrav | MNNIT</title>
 	<meta name="description" content="Item hover effects that reveal a colored stack behind the hovered item" />
 	<meta name="keywords" content="hover effect, reveal, hover, css, animations, anime.js, javascript, motion, ux" />
 	<meta name="author" content="Codrops" />
@@ -76,8 +76,6 @@
 
 
 
-
-
 	<section class="content">
 		<div class="grid grid--effect-hamal">
 			<a class="grid__item grid__item--c1">
@@ -91,8 +89,8 @@
 					</div>
 				</div>
 				<div class="grid__item-caption">
-					<h3 class="grid__item-title">anaerobic</h3>
-					<div class="column column--left">
+					<h3 class="grid__item-title">Face Painting</h3>
+					<!-- <div class="column column--left">
 						<span class="column__text">Period</span>
 						<span class="column__text">Subjects</span>
 						<span class="column__text">Result</span>
@@ -101,7 +99,7 @@
 						<span class="column__text">2045</span>
 						<span class="column__text">133456</span>
 						<span class="column__text">Positive</span>
-					</div>
+					</div> -->
 				</div>
 			</a>
 			<a class="grid__item grid__item--c2">
@@ -115,8 +113,8 @@
 					</div>
 				</div>
 				<div class="grid__item-caption">
-					<h3 class="grid__item-title">exothermic</h3>
-					<div class="column column--left">
+					<h3 class="grid__item-title">Rangoli Making</h3>
+					<!-- <div class="column column--left">
 						<span class="column__text">Period</span>
 						<span class="column__text">Subjects</span>
 						<span class="column__text">Result</span>
@@ -125,7 +123,7 @@
 						<span class="column__text">2045</span>
 						<span class="column__text">133456</span>
 						<span class="column__text">Positive</span>
-					</div>
+					</div> -->
 				</div>
 			</a>
 			<a  class="grid__item grid__item--c3">
@@ -139,8 +137,8 @@
 					</div>
 				</div>
 				<div class="grid__item-caption">
-					<h3 class="grid__item-title">diatomic</h3>
-					<div class="column column--left">
+					<h3 class="grid__item-title">Doodling</h3>
+					<!-- <div class="column column--left">
 						<span class="column__text">Period</span>
 						<span class="column__text">Subjects</span>
 						<span class="column__text">Result</span>
@@ -149,7 +147,7 @@
 						<span class="column__text">2045</span>
 						<span class="column__text">133456</span>
 						<span class="column__text">Positive</span>
-					</div>
+					</div> -->
 				</div>
 			</a>
 		</div>
