MOdify Team Page

--- a/team/index.html
+++ b/team/index.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="Luis Manuel for Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Nanum+Brush+Script" rel="stylesheet">
@@ -64,27 +65,72 @@
 	
 		<div class="content">
 			<div class="grid">
-				<figure class="col-md-2 col-md-offset-0 effect-chico">
+
+
+				<figure class="effect-chico">
 					<img src="img/15.jpg" alt="img15"/>
 					<figcaption>
-						<h4>Silly <span>Chico</span></h4>
-						<p>Chico's main fear was missing the morning bus.</p>
+						<h4>Anushka<br><span>&nbsp;&nbsp;Srivastava</span></h4>
+						<!-- <p><i class="fa fa-phone" aria-hidden="true"></i></p> -->
+						<p><i class="fa fa-envelope" aria-hidden="true"></i>anushka.srivastava@culrav.in</p>
 					</figcaption>			
 				</figure>
-				<figure class="col-md-2 col-md-offset-0 effect-chico">
+				<figure class="effect-chico">
 					<img src="img/4.jpg" alt="img04"/>
 					<figcaption>
-						<h4>Silly <span>Chico</span></h4>
-						<p>Chico's main fear was missing the morning bus.</p>
+						<h4>Pragati <span>&nbsp;&nbsp;Gupta</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>pragati.gupta@culrav.in</p>
 					</figcaption>			
 				</figure>
-				<figure class=" col-md-2 col-md-offset-0 effect-chico">
+				<figure class="effect-chico">
 					<img src="img/4.jpg" alt="img04"/>
 					<figcaption>
-						<h4>Silly <span>Chico</span></h4>
+						<h4>Prateek <span>&nbsp;&nbsp;Sahu</span></h4>
 						<p>Chico's main fear was missing the morning bus.</p>
 					</figcaption>			
 				</figure>
+				
+		
+
+
+
+		
+			
+				<figure class="effect-chico">
+					<img src="img/15.jpg" alt="img15"/>
+					<figcaption>
+						<h4>Riyaz<span>&nbsp;&nbsp;Panjwani</span></h4>
+						<p>Chico's main fear was missing the morning bus.</p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/4.jpg" alt="img04"/>
+					<figcaption>
+						<h4>Sagar <span>&nbsp;&nbsp;Nagaich</span></h4>
+						<p>Chico's main fear was missing the morning bus.</p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/4.jpg" alt="img04"/>
+					<figcaption>
+						<h4>Shubham <span>&nbsp;&nbsp;Singh</span></h4>
+						<p>Chico's main fear was missing the morning bus.</p>
+					</figcaption>			
+				</figure>
+			
+
+
+		
+			
+				<figure class="effect-chico">
+					<img src="img/15.jpg" alt="img15"/>
+					<figcaption>
+						<h4>Utpal<span>&nbsp;&nbsp;Singh</span></h4>
+						<p>Chico's main fear was missing the morning bus.</p>
+					</figcaption>			
+				</figure>
+
+
 			</div>	
 		</div>
 	
