Modify team page and subevents page

--- a/subevents2/rangmanch/index.html
+++ b/subevents2/rangmanch/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Image Glitch Effect | Demo 3 | Codrops</title>
+	<title>Rangmanch | Culrav | MNNIT</title>
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="shortcut icon" href="favicon.ico">
@@ -26,6 +26,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Material Design Bootstrap -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.0/css/mdb.min.css" rel="stylesheet">
+	<link href="./css/navbar.css" rel="stylesheet">
 
 
 
@@ -126,7 +127,7 @@
 					<div class="glitch__img"></div>
 					<div class="glitch__img"></div>
 				</div>
-				<h2 class="grid__item-title">Hasyamanch<span>Monotony</span></h2>
+				<h2 class="grid__item-title">Stage Play</h2>
 			</div>
 			<!-- <div class="grid__item">
 				<div class="glitch glitch--style-5">
