--- a/team/index.html
+++ b/team/index.html
@@ -58,11 +58,17 @@
 
 
 
+	<div class="row">
+
+		<center>
+			<div class="title">
+				Faculty Coordinators
+			</div>
+		</center>
 
 
 
 
-	
 		<div class="content">
 			<div class="grid">
 
@@ -89,13 +95,58 @@
 						<p>Chico's main fear was missing the morning bus.</p>
 					</figcaption>			
 				</figure>
-				
-		
+			</div>	
+		</div>
 
 
 
-		
-			
+
+	</div>
+
+	<div class="row" style="margin-top:6vh">
+
+		<center>
+			<div class="title">
+				Festival Secrataries
+			</div>
+		</center>
+
+
+
+
+		<div class="content">
+			<div class="grid">
+
+
+				<figure class="effect-chico">
+					<img src="img/15.jpg" alt="img15"/>
+					<figcaption>
+						<h4>Anushka<br><span>&nbsp;&nbsp;Srivastava</span></h4>
+						<!-- <p><i class="fa fa-phone" aria-hidden="true"></i></p> -->
+						<p><i class="fa fa-envelope" aria-hidden="true"></i>anushka.srivastava@culrav.in</p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/4.jpg" alt="img04"/>
+					<figcaption>
+						<h4>Pragati <span>&nbsp;&nbsp;Gupta</span></h4>
+						<p><i class="fa fa-envelope" aria-hidden="true"></i><br>pragati.gupta@culrav.in</p>
+					</figcaption>			
+				</figure>
+				<figure class="effect-chico">
+					<img src="img/4.jpg" alt="img04"/>
+					<figcaption>
+						<h4>Prateek <span>&nbsp;&nbsp;Sahu</span></h4>
+						<p>Chico's main fear was missing the morning bus.</p>
+					</figcaption>			
+				</figure>
+
+
+
+
+
+
+
 				<figure class="effect-chico">
 					<img src="img/15.jpg" alt="img15"/>
 					<figcaption>
@@ -117,11 +168,11 @@
 						<p>Chico's main fear was missing the morning bus.</p>
 					</figcaption>			
 				</figure>
-			
 
 
-		
-			
+
+
+
 				<figure class="effect-chico">
 					<img src="img/15.jpg" alt="img15"/>
 					<figcaption>
@@ -133,7 +184,14 @@
 
 			</div>	
 		</div>
-	
+
+
+
+	</div>
+
+
+
+
 
 
 
