Add header to subevents

--- a/subevents4/anunaad/index.html
+++ b/subevents4/anunaad/index.html
@@ -10,38 +10,120 @@
 	<meta name="keywords" content="template, web design, html, javascript, layout, css, slide out" />
 	<meta name="author" content="Codrops" />
 	<link rel="shortcut icon" href="favicon.ico">
+	
+	<script
+	src="https://code.jquery.com/jquery-3.3.1.min.js"
+	integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" type="text/javascript"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
+	<link rel="stylesheet" type="text/css" href="css/base.css" />
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	<!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
 </head>
 <body class="loading">
+
+
+
+
+
+
+
+
+
+
+
+
+
 	
 	<main>
+
+
+
+
+
+		<!-- <div class="header-nightsky">
+			<nav class="navbar navbar-default navbar-static-top ">
+				<div class="container">
+					<a class="navbar-brand" href="#">LOGO</a>
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					</div>
+					<div class="collapse navbar-collapse" id="myNavbar">
+						<ul class="nav navbar-nav navbar-right">
+							<li><a href="https://www.culrav.in">HOME</a></li>
+							<li><a href="">EVENTS</a></li>
+							<li><a href="">SPONSORS</a></li>
+							<li><a href="">TEAM</a></li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+		</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 		<div class="sections">
 			<header class="sections__header">
 				<h1 class="title">ANUNAAD</h1>
 			</header>
 
+
+
+
+
+
 			<!-- menu -->
-				<!-- <nav class="menu">
+				<nav class="menu">
 					<ul class="menu__inner">
-						<li class="menu__item"><a class="menu__item-link" href="#">Our Story</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Adventures</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Testimonials</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Contact</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Home</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Events</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Sponsors</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Team</a></li>
 					</ul>
 					<div class="menu__toggle">
 						<span class="menu__toggle-inner menu__toggle-inner--open">
-							<svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg>
+							<i class="fa fa-list-ul"><!-- <use xlink:href="#icon-menu"></use> --></i>
 						</span>
 						<span class="menu__toggle-inner menu__toggle-inner--close">
-							<svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg>
+							<i class="fa fa-times"></i>
 						</span>
 					</div>
-				</nav> -->
+				</nav>
+
+
+
+
+
+
+
+
+
+
 				<!-- facts expander with toggles; content for each is in its section -->
 				<div class="facts">
 					<div class="facts__toggle">
