--- a/subevents4/razmatazz/index.html
+++ b/subevents4/razmatazz/index.html
@@ -26,22 +26,29 @@
 			</header>
 
 			<!-- menu -->
-				<!-- <nav class="menu">
+				<nav class="menu">
 					<ul class="menu__inner">
-						<li class="menu__item"><a class="menu__item-link" href="#">Our Story</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Adventures</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Testimonials</a></li>
-						<li class="menu__item"><a class="menu__item-link" href="#">Contact</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Home</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Events</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Sponsors</a></li>
+						<li class="menu__item"><a class="menu__item-link" href="#">Team</a></li>
 					</ul>
 					<div class="menu__toggle">
 						<span class="menu__toggle-inner menu__toggle-inner--open">
-							<svg class="icon icon--menu"><use xlink:href="#icon-menu"></use></svg>
+							<i class="fa fa-list-ul"><!-- <use xlink:href="#icon-menu"></use> --></i>
 						</span>
 						<span class="menu__toggle-inner menu__toggle-inner--close">
-							<svg class="icon icon--close"><use xlink:href="#icon-close"></use></svg>
+							<i class="fa fa-times"></i>
 						</span>
 					</div>
-				</nav> -->
+				</nav>
+
+
+
+
+
+
+				
 				<!-- facts expander with toggles; content for each is in its section -->
 				<div class="facts">
 					<div class="facts__toggle">
