--- a/index/index.html
+++ b/index/index.html
@@ -1,68 +1,85 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	
+
 <!-- Mirrored from tympanus.net/Development/SegmentEffect/index6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2018 08:08:10 GMT -->
 <head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Segment Effect | Demo 5 | Codrops</title>
-		<meta name="description" content="Background image segment effect" />
-		<meta name="keywords" content="css, html, backgorund image, effect, boxes, segments" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="favicon.ico">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Culrav | MNNIT </title>
+	<meta name="description" content="Background image segment effect" />
+	<meta name="keywords" content="css, html, backgorund image, effect, boxes, segments" />
+	<meta name="author" content="Codrops" />
+	<link rel="shortcut icon" href="favicon.ico">
+	<link href="https://fonts.googleapis.com/css?family=Chewy:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Freckle+Face:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Electrolize:400,700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/demo.css" />
+	<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<!--[if IE]>
 			<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		<script>
-		document.documentElement.className = 'js';
-		</script>
-		<script type="text/javascript">
-var _gaq = _gaq || [];
-_gaq.push(['_setAccount', 'UA-7243260-2']);
-_gaq.push(['_trackPageview']);
-(function() {
-var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-</script>
-	</head>
-	<body class="demo-6">
-		
-		<main>
-			
-			<!-- Initial markup -->
-			<div class="segmenter" style="background-image: url(img/bg6.jpg)"></div>
-			<center><h2 class="trigger-headline trigger-headline--hidden" style="font-family:flesh;color:#F28B04;letter-spacing:5vw;font-size:10vw;"><span>CULRAV</span></h2><center>
-			<div class="bottom-nav">
-				<button class="btn btn--trigger btn--hidden">Show Effect</button>
-				
-			</div>
-		</main>
-		<script src="js/anime.min.js"></script>
-		<script src="js/imagesloaded.pkgd.min.js"></script>
-		<script src="js/main.js"></script>
-		<script>
-		(function() {
-			var headline = document.querySelector('.trigger-headline'),
+			<![endif]-->
+			<script>
+			document.documentElement.className = 'js';
+			</script>
+			<script type="text/javascript">
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-7243260-2']);
+			_gaq.push(['_trackPageview']);
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+			</script>
+		</head>
+		<body class="demo-6">
+
+			<main>
+
+				<!-- Initial markup -->
+				<div class="segmenter" style="background-image: url(img/bg6.jpg)"></div>
+				<center><h2 class="trigger-headline trigger-headline--hidden" style="font-family:flesh;color:#F28B04;letter-spacing:5vw;font-size:10vw;">
+					<span>CULRAV<br><span style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-size:3vw;font-weight:300"><i>"Tryst With Darkness"</i></span>
+					<br><span style="font-family:Chewy;color:white;letter-spacing:0.5vw;font-size:3vw;">21<sup>st</sup>-24<sup>th</sup> March 2018</span>
+					<br><span style="font-family:Electrolize;color:white;letter-spacing:0.3vw;font-size:1.5vw;margin-left:-5%">Motilal Nehru National Institute Of Technology, Allahabad</span>
+				</span></h2><center>
+				<div class="bottom-nav">
+					<button class="btn btn--trigger btn--hidden" style="display:none"></button>
+
+				</div>
+			</main>
+			<script
+			src="https://code.jquery.com/jquery-3.3.1.min.js"
+			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+			crossorigin="anonymous"></script>
+
+
+			<script src="js/anime.min.js"></script>
+			<script src="js/imagesloaded.pkgd.min.js"></script>
+			<script src="js/main.js"></script>
+			<script>
+			setTimeout(function(){
+				$('.btn--trigger').trigger('click');
+			},200);
+			</script>
+			<script>
+			(function() {
+				var headline = document.querySelector('.trigger-headline'),
 				trigger = document.querySelector('.btn--trigger'),
 				segmenter = new Segmenter(document.querySelector('.segmenter'), {
 					pieces: 9,
 					positions: [
-						{top: 30, left: 5, width: 40, height: 80},
-						{top: 50, left: 25, width: 30, height: 30},
-						{top: 5, left: 75, width: 40, height: 20},
-						{top: 30, left: 45, width: 40, height: 20},
-						{top: 45, left: 15, width: 50, height: 40},
-						{top: 10, left: 40, width: 10, height: 20},
-						{top: 20, left: 50, width: 30, height: 70},
-						{top: 0, left: 10, width: 50, height: 60},
-						{top: 70, left: 40, width: 30, height: 30}
+					{top: 30, left: 5, width: 40, height: 80},
+					{top: 50, left: 25, width: 30, height: 30},
+					{top: 5, left: 75, width: 40, height: 20},
+					{top: 30, left: 45, width: 40, height: 20},
+					{top: 45, left: 15, width: 50, height: 40},
+					{top: 10, left: 40, width: 10, height: 20},
+					{top: 20, left: 50, width: 30, height: 70},
+					{top: 0, left: 10, width: 50, height: 60},
+					{top: 70, left: 40, width: 30, height: 30}
 					],
 					animation: {
 						duration: 2000,
@@ -84,10 +101,10 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 						});
 					}
 				});
-		})();
-		</script>
+})();
+</script>
 
-	</body>
+</body>
 
 <!-- Mirrored from tympanus.net/Development/SegmentEffect/index6.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 26 Feb 2018 08:08:21 GMT -->
 </html>
