--- a/index/index.html
+++ b/index/index.html
@@ -17,10 +17,11 @@
 	<link href="https://fonts.googleapis.com/css?family=Electrolize:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	
-	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
+	
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
+	<link rel="stylesheet" type="text/css" href="css/navbar.css" />
 
 	<!-- <link rel="stylesheet" type="text/css" href="css/navbar.css" /> -->
 	<script
@@ -71,7 +72,23 @@
 
 
 			<!-- Initial markup -->
-			<div class="segmenter" style="background-image: url(img/bg6.jpg)"></div>
+			<div class="segmenter" style="background-image: url(img/bg6.jpg)">
+
+				
+
+			</div>
+
+
+
+
+
+			
+
+
+
+
+
+
 			<center><h2 class="trigger-headline trigger-headline--hidden" style="font-family:flesh;color:#F28B04;letter-spacing:5vw;font-size:10vw;">
 				<span>CULRAV<br><span style="font-family:Freckle Face;color:white;letter-spacing:0.5vw;font-size:3vw;font-weight:300"><i class="slogan">"Tryst With Darkness"</i></span>
 				<br><span style="font-family:Chewy;color:white;letter-spacing:0.5vw;font-size:3vw;">21<sup>st</sup>-24<sup>th</sup> March 2018</span>
@@ -89,11 +106,7 @@
 		<script src="js/imagesloaded.pkgd.min.js"></script>
 		<script src="js/main.js"></script>
 
-		<script>
-		setTimeout(function(){
-			$('.btn--trigger').trigger('click');
-		},500);
-		</script>
+
 		<script>
 		(function() {
 			var headline = document.querySelector('.trigger-headline'),
@@ -133,6 +146,14 @@
 			});
 })();
 </script>
+
+<script>
+setTimeout(function(){
+	$('.btn--trigger').trigger('click');
+},500);
+</script>
+
+
 <script src="js/navbar.js"></script>
 
 </body>
